.archive/clusters/homelab-1/.network-policies/allow-egress-to-blocky/source/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-blocky
spec:
  podSelector:
    matchLabels:
      networking/allow-egress-to-blocky: "true"
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network
          podSelector:
            matchLabels:
              app.kubernetes.io/name: blocky
      ports:
        - protocol: UDP
          port: 53
